# interpolation2

./: LICENSE  interpolation.cabal  interpolation2.cabal
example/: Fit.hs  Plot.hs  Plot2DExtra.hs
private/Numeric/Interpolation/Private/: Basis.hs  List.hs  Piece.hs
src/Numeric/Interpolation/: Basis.hs  NodeList.hs  Piece.hs  Piecewise.hs  Sample.hs  Type.hs
src/Numeric/Interpolation/Basis/: Compact.hs  Full.hs
