Name:             interpolation2
Version:          0.1.1.2
License:          BSD3
License-File:     LICENSE
Homepage:         https://github.com/ghais/interpolation2
Category:         Math
Synopsis:         piecewise linear and cubic Hermite coercible interpolation
Cabal-Version:    >=1.8
Build-Type:       Simple
Extra-Source-Files:
  ChangeLog

Flag buildExamples
  description: Build example executables
  default:     False

Flag lapack
  description: Build examples that depend on lapack
  default:     True

source-repository head
  type:                git
  location:            https://github.com/ghais/interpolation2.git

Library
  Build-Depends:
      utility-ht >=0.0.1 && <0.1
    , base >=4 && <5
    , sorted-list
  GHC-Options:      -Wall
  Hs-Source-Dirs:   src, private
  Exposed-Modules:
    Numeric.Interpolation.NodeList
    Numeric.Interpolation.Piece
    Numeric.Interpolation.Piecewise
    Numeric.Interpolation.Type
    Numeric.Interpolation.Basis
    Numeric.Interpolation.Basis.Compact
    Numeric.Interpolation.Basis.Full
    Numeric.Interpolation.Sample
  Other-Modules:
    Numeric.Interpolation.Private.Piece
    Numeric.Interpolation.Private.Basis
    Numeric.Interpolation.Private.List

Executable interpolation-plot
  Main-Is:             Plot.hs
  Other-Modules:       Plot2DExtra
  Hs-Source-Dirs:      example
  GHC-Options:         -Wall
  If flag(buildExamples)
    Build-Depends:
      interpolation2,
      gnuplot >=0.5.6 && <0.6,
      utility-ht >=0.0.9 && <0.1,
      base >=4.5 && <5
  Else
    Buildable: False

Executable interpolation-fit
  Main-Is:             Fit.hs
  Other-Modules:       Plot2DExtra
  Hs-Source-Dirs:      example
  GHC-Options:         -Wall
  If flag(buildExamples) && flag(lapack)
    Build-Depends:
      interpolation2,
      lapack >=0.3 && <0.4,
      tfp >=1.0 && <1.1,
      comfort-array >=0.4 && <0.5,
      random >=1.0,
      gnuplot >=0.5.6 && <0.6,
      utility-ht >=0.0.9 && <0.1,
      base >=4.5 && <5
  Else
    Buildable: False

Test-Suite interpolation-test
  Type:                exitcode-stdio-1.0
  Main-Is:             Test.hs
  Other-Modules:
    Test.Numeric.Interpolation.Type
    Test.Numeric.Interpolation.NodeList
    Test.Numeric.Interpolation.Piece
    Test.Numeric.Interpolation.Piecewise
    Numeric.Interpolation.Private.Piece
  Hs-Source-Dirs:      test, private
  GHC-Options:         -Wall
  Build-Depends:
    interpolation2,
    doctest-exitcode-stdio >=0.0 && <0.1,
    doctest-lib >=0.1 && <0.2,
    QuickCheck >=2.4 && <3,
    utility-ht >=0.0.9 && <0.1,
    array >=0.4 && <0.6,
    containers >=0.4 && <0.7,
    base >=4.5 && <5
